Modification du nom du projet Ajout de la modification et de l'ajout des armes / gladiateurs Ajout de la sauvegarde a chaque modification
Il reste un probleme de cast au niveau de la modification du type de
gladiateur

--- a/WebProto1/WebContent/upload.html
+++ b/WebProto1/WebContent/upload.html
@@ -9,7 +9,7 @@
 		<form action="uploadservlet" method="post"
 			enctype="multipart/form-data">
 			<input type="file" name="uploadFile" size="50" /> <br /> 
-			<input type="submit" value="Upload File" />
+			<input type="submit" value="Envoyer fichier" />
 		</form>
 	</body>
 </html>
